Lots of updates and added tests

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 
   color: rgba(255, 255, 255, 0.87);
   background-image: url("assets/img/pokemonBackground.jpg");
+  background-size: 100vw 110vh;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
