--- a/src/index.css
+++ b/src/index.css
@@ -54,10 +54,10 @@ td {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #1A2F44;
+  background: darkblue;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: lightskyblue;
+  background: rgb(200, 200, 200);
 }
